--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>{% block title %}{% endblock %}</title>
+        <link rel="stylesheet" href="/static/app.css">
     </head>
     <body>
         <article>{% block content %}{% endblock %}</article>
