--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-color-mode="dark" data-dark-theme="dark">
     <head>
         <meta charset="utf-8">
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="/static/app.css">
     </head>
     <body>
-        <article>{% block content %}{% endblock %}</article>
+        <article class="markdown-body">{% block content %}{% endblock %}</article>
     </body>
 </html>
